--- a/i686-unknown-linux-gnu/.config
+++ b/i686-unknown-linux-gnu/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# crosstool-NG 1.26.0.115_efcfd1a Configuration
+# crosstool-NG 1.28.0 Configuration
 #
 CT_CONFIGURE_has_cxx11=y
 CT_CONFIGURE_has_lzip=y
@@ -13,7 +13,6 @@ CT_CONFIGURE_has_libtool_2_4_or_newer=y
 CT_CONFIGURE_has_libtoolize_2_4_or_newer=y
 CT_CONFIGURE_has_autoconf_2_65_or_newer=y
 CT_CONFIGURE_has_autoreconf_2_65_or_newer=y
-CT_CONFIGURE_has_automake_1_15_or_newer=y
 CT_CONFIGURE_has_gnu_m4_1_4_12_or_newer=y
 CT_CONFIGURE_has_python_3_4_or_newer=y
 CT_CONFIGURE_has_bison_2_7_or_newer=y
@@ -26,7 +25,7 @@ CT_CONFIGURE_has_sha1sum=y
 CT_CONFIGURE_has_sha256sum=y
 CT_CONFIGURE_has_sha512sum=y
 CT_CONFIGURE_has_install_with_strip_program=y
-CT_VERSION="1.26.0.115_efcfd1a"
+CT_VERSION="1.28.0"
 CT_VCHECK=""
 CT_CONFIG_VERSION_ENV="4"
 CT_CONFIG_VERSION_CURRENT="4"
@@ -137,6 +136,7 @@ CT_LOG_FILE_COMPRESS=y
 # CT_ARCH_POWERPC is not set
 # CT_ARCH_PRU is not set
 # CT_ARCH_RISCV is not set
+# CT_ARCH_RX is not set
 # CT_ARCH_S390 is not set
 # CT_ARCH_SH is not set
 # CT_ARCH_SPARC is not set
@@ -152,7 +152,7 @@ CT_ARCH_X86_SHOW=y
 # Options for x86
 #
 CT_ARCH_X86_PKG_KSYM=""
-CT_ALL_ARCH_CHOICES="ALPHA ARC ARM AVR BPF C6X LOONGARCH M68K MICROBLAZE MIPS MOXIE MSP430 NIOS2 PARISC POWERPC PRU RISCV S390 SH SPARC X86 XTENSA"
+CT_ALL_ARCH_CHOICES="ALPHA ARC ARM AVR BPF C6X LM32 LOONGARCH M68K MICROBLAZE MIPS MOXIE MSP430 NIOS2 OPENRISC PARISC POWERPC PRU RISCV RX S390 SH SPARC TRICORE X86 XTENSA"
 CT_ARCH_SUFFIX=""
 # CT_OMIT_TARGET_VENDOR is not set
 
@@ -221,6 +221,7 @@ CT_BUILD_SUFFIX=""
 # Misc options
 #
 # CT_TOOLCHAIN_ENABLE_NLS is not set
+# CT_TOOLCHAIN_CMAKE_TOOLCHAIN_FILE is not set
 # end of Toolchain options
 
 #
@@ -242,6 +243,12 @@ CT_LINUX_PKG_NAME="linux"
 CT_LINUX_SRC_RELEASE=y
 # CT_LINUX_SRC_DEVEL is not set
 CT_LINUX_PATCH_ORDER="global"
+# CT_LINUX_V_6_16 is not set
+# CT_LINUX_V_6_15 is not set
+# CT_LINUX_V_6_14 is not set
+# CT_LINUX_V_6_13 is not set
+# CT_LINUX_V_6_12 is not set
+# CT_LINUX_V_6_11 is not set
 # CT_LINUX_V_6_10 is not set
 # CT_LINUX_V_6_9 is not set
 # CT_LINUX_V_6_8 is not set
@@ -293,8 +300,7 @@ CT_LINUX_V_5_10=y
 # CT_LINUX_V_3_10 is not set
 # CT_LINUX_V_3_4 is not set
 # CT_LINUX_V_3_2 is not set
-# CT_LINUX_V_2_6_32 is not set
-CT_LINUX_VERSION="5.10.222"
+CT_LINUX_VERSION="5.10.240"
 CT_LINUX_MIRRORS="$(CT_Mirrors kernel.org linux ${CT_LINUX_VERSION})"
 CT_LINUX_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_LINUX_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
@@ -314,6 +320,7 @@ CT_LINUX_later_than_3_7=y
 CT_LINUX_3_7_or_later=y
 CT_LINUX_later_than_3_2=y
 CT_LINUX_3_2_or_later=y
+CT_LINUX_REQUIRE_3_2_or_later=y
 CT_KERNEL_has_rsync=y
 CT_KERNEL_DEP_RSYNC=y
 CT_KERNEL_LINUX_VERBOSITY_0=y
@@ -349,6 +356,8 @@ CT_BINUTILS_PKG_NAME="binutils"
 CT_BINUTILS_SRC_RELEASE=y
 # CT_BINUTILS_SRC_DEVEL is not set
 CT_BINUTILS_PATCH_ORDER="global"
+# CT_BINUTILS_V_2_45 is not set
+# CT_BINUTILS_V_2_44 is not set
 # CT_BINUTILS_V_2_43 is not set
 # CT_BINUTILS_V_2_42 is not set
 # CT_BINUTILS_V_2_41 is not set
@@ -373,6 +382,12 @@ CT_BINUTILS_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_BINUTILS_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_BINUTILS_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz"
 CT_BINUTILS_SIGNATURE_FORMAT="packed/.sig"
+CT_BINUTILS_2_45_or_older=y
+CT_BINUTILS_older_than_2_45=y
+CT_BINUTILS_2_44_or_older=y
+CT_BINUTILS_older_than_2_44=y
+CT_BINUTILS_2_41_or_older=y
+CT_BINUTILS_older_than_2_41=y
 CT_BINUTILS_later_than_2_39=y
 CT_BINUTILS_2_39_or_later=y
 CT_BINUTILS_later_than_2_30=y
@@ -386,6 +401,7 @@ CT_BINUTILS_2_26_or_later=y
 # GNU binutils
 #
 CT_BINUTILS_GOLD_SUPPORTS_ARCH=y
+CT_BINUTILS_HAS_GOLD=y
 CT_BINUTILS_GOLD_SUPPORT=y
 CT_BINUTILS_FORCE_LD_BFD_DEFAULT=y
 CT_BINUTILS_LINKER_LD=y
@@ -397,6 +413,7 @@ CT_BINUTILS_RELRO=m
 CT_BINUTILS_DETERMINISTIC_ARCHIVES=y
 CT_BINUTILS_EXTRA_CONFIG_ARRAY=""
 # CT_BINUTILS_FOR_TARGET is not set
+# CT_BINUTILS_GPROFNG is not set
 CT_ALL_BINUTILS_CHOICES="BINUTILS"
 # end of Binary utilities
 
@@ -422,6 +439,8 @@ CT_GLIBC_PKG_NAME="glibc"
 CT_GLIBC_SRC_RELEASE=y
 # CT_GLIBC_SRC_DEVEL is not set
 CT_GLIBC_PATCH_ORDER="global"
+# CT_GLIBC_V_2_42 is not set
+# CT_GLIBC_V_2_41 is not set
 # CT_GLIBC_V_2_40 is not set
 # CT_GLIBC_V_2_39 is not set
 # CT_GLIBC_V_2_38 is not set
@@ -434,20 +453,24 @@ CT_GLIBC_PATCH_ORDER="global"
 # CT_GLIBC_V_2_31 is not set
 # CT_GLIBC_V_2_30 is not set
 # CT_GLIBC_V_2_29 is not set
-# CT_GLIBC_V_2_28 is not set
+CT_GLIBC_V_2_28=y
 # CT_GLIBC_V_2_27 is not set
 # CT_GLIBC_V_2_26 is not set
 # CT_GLIBC_V_2_25 is not set
 # CT_GLIBC_V_2_24 is not set
 # CT_GLIBC_V_2_23 is not set
 # CT_GLIBC_V_2_19 is not set
-CT_GLIBC_V_2_17=y
-CT_GLIBC_VERSION="2.17"
+# CT_GLIBC_V_2_17 is not set
+CT_GLIBC_VERSION="2.28"
 CT_GLIBC_MIRRORS="$(CT_Mirrors GNU glibc)"
 CT_GLIBC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GLIBC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GLIBC_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz"
 CT_GLIBC_SIGNATURE_FORMAT="packed/.sig"
+CT_GLIBC_2_42_or_older=y
+CT_GLIBC_older_than_2_42=y
+CT_GLIBC_2_41_or_older=y
+CT_GLIBC_older_than_2_41=y
 CT_GLIBC_2_38_or_older=y
 CT_GLIBC_older_than_2_38=y
 CT_GLIBC_2_37_or_older=y
@@ -464,22 +487,22 @@ CT_GLIBC_2_30_or_older=y
 CT_GLIBC_older_than_2_30=y
 CT_GLIBC_2_29_or_older=y
 CT_GLIBC_older_than_2_29=y
+CT_GLIBC_2_28_or_later=y
 CT_GLIBC_2_28_or_older=y
-CT_GLIBC_older_than_2_28=y
-CT_GLIBC_2_27_or_older=y
-CT_GLIBC_older_than_2_27=y
-CT_GLIBC_2_26_or_older=y
-CT_GLIBC_older_than_2_26=y
-CT_GLIBC_2_25_or_older=y
-CT_GLIBC_older_than_2_25=y
-CT_GLIBC_2_24_or_older=y
-CT_GLIBC_older_than_2_24=y
-CT_GLIBC_2_23_or_older=y
-CT_GLIBC_older_than_2_23=y
-CT_GLIBC_2_20_or_older=y
-CT_GLIBC_older_than_2_20=y
+CT_GLIBC_later_than_2_27=y
+CT_GLIBC_2_27_or_later=y
+CT_GLIBC_later_than_2_26=y
+CT_GLIBC_2_26_or_later=y
+CT_GLIBC_later_than_2_25=y
+CT_GLIBC_2_25_or_later=y
+CT_GLIBC_later_than_2_24=y
+CT_GLIBC_2_24_or_later=y
+CT_GLIBC_later_than_2_23=y
+CT_GLIBC_2_23_or_later=y
+CT_GLIBC_later_than_2_20=y
+CT_GLIBC_2_20_or_later=y
+CT_GLIBC_later_than_2_17=y
 CT_GLIBC_2_17_or_later=y
-CT_GLIBC_2_17_or_older=y
 CT_GLIBC_later_than_2_14=y
 CT_GLIBC_2_14_or_later=y
 CT_GLIBC_DEP_KERNEL_HEADERS_VERSION=y
@@ -489,11 +512,10 @@ CT_GLIBC_DEP_PYTHON=y
 CT_GLIBC_DEP_MAKE_4_3=y
 CT_GLIBC_SPARC_ALLOW_V7=y
 CT_THREADS="nptl"
-CT_GLIBC_HAS_NPTL_ADDON=y
-CT_GLIBC_HAS_PORTS_ADDON=y
+CT_GLIBC_BUILD_SSP=y
 CT_GLIBC_HAS_LIBIDN_ADDON=y
-CT_GLIBC_USE_NPTL_ADDON=y
 # CT_GLIBC_USE_LIBIDN_ADDON is not set
+CT_GLIBC_NO_SPARC_V8=y
 CT_GLIBC_HAS_OBSOLETE_RPC=y
 CT_GLIBC_EXTRA_CONFIG_ARRAY=""
 CT_GLIBC_CONFIGPARMS=""
@@ -507,7 +529,12 @@ CT_GLIBC_FORCE_UNWIND=y
 # CT_GLIBC_KERNEL_VERSION_NONE is not set
 CT_GLIBC_KERNEL_VERSION_AS_HEADERS=y
 # CT_GLIBC_KERNEL_VERSION_CHOSEN is not set
-CT_GLIBC_MIN_KERNEL="5.10.222"
+CT_GLIBC_MIN_KERNEL="5.10.240"
+CT_GLIBC_SSP_DEFAULT=y
+# CT_GLIBC_SSP_NO is not set
+# CT_GLIBC_SSP_YES is not set
+# CT_GLIBC_SSP_ALL is not set
+# CT_GLIBC_SSP_STRONG is not set
 CT_GLIBC_ENABLE_COMMON_FLAG=y
 CT_ALL_LIBC_CHOICES="AVR_LIBC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE PICOLIBC UCLIBC_NG"
 CT_LIBC_SUPPORT_THREADS_ANY=y
@@ -550,6 +577,7 @@ CT_GCC_PKG_NAME="gcc"
 CT_GCC_SRC_RELEASE=y
 # CT_GCC_SRC_DEVEL is not set
 CT_GCC_PATCH_ORDER="global"
+# CT_GCC_V_15 is not set
 # CT_GCC_V_14 is not set
 CT_GCC_V_13=y
 # CT_GCC_V_12 is not set
@@ -561,12 +589,14 @@ CT_GCC_V_13=y
 # CT_GCC_V_6 is not set
 # CT_GCC_V_5 is not set
 # CT_GCC_V_4_9 is not set
-CT_GCC_VERSION="13.3.0"
+CT_GCC_VERSION="13.4.0"
 CT_GCC_MIRRORS="$(CT_Mirrors GNU gcc/gcc-${CT_GCC_VERSION}) $(CT_Mirrors sourceware gcc/releases/gcc-${CT_GCC_VERSION})"
 CT_GCC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GCC_SIGNATURE_FORMAT=""
+CT_GCC_15_or_older=y
+CT_GCC_older_than_15=y
 CT_GCC_14_or_older=y
 CT_GCC_older_than_14=y
 CT_GCC_later_than_13=y
@@ -589,6 +619,7 @@ CT_GCC_later_than_5=y
 CT_GCC_5_or_later=y
 CT_GCC_later_than_4_9=y
 CT_GCC_4_9_or_later=y
+CT_GCC_REQUIRE_4_9_or_later=y
 CT_CC_GCC_HAS_LIBMPX=y
 CT_CC_GCC_ENABLE_CXX_FLAGS=""
 CT_CC_GCC_CORE_EXTRA_CONFIG_ARRAY=""
@@ -608,6 +639,9 @@ CT_CC_GCC_LTO_ZSTD=m
 #
 # CT_CC_GCC_ENABLE_DEFAULT_PIE is not set
 CT_CC_GCC_ENABLE_TARGET_OPTSPACE=y
+CT_CC_GCC_LIBSTDCXX=m
+# CT_CC_GCC_LIBSTDCXX_HOSTED_DISABLE is not set
+CT_CC_GCC_LIBSTDCXX_TARGET_CXXFLAGS=""
 # CT_CC_GCC_LIBMUDFLAP is not set
 CT_CC_GCC_LIBGOMP=y
 CT_CC_GCC_LIBSSP=y
@@ -666,6 +700,7 @@ CT_GDB_PKG_NAME="gdb"
 CT_GDB_SRC_RELEASE=y
 # CT_GDB_SRC_DEVEL is not set
 CT_GDB_PATCH_ORDER="global"
+# CT_GDB_V_16 is not set
 # CT_GDB_V_15 is not set
 # CT_GDB_V_14 is not set
 CT_GDB_V_13=y
@@ -680,6 +715,8 @@ CT_GDB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GDB_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GDB_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GDB_SIGNATURE_FORMAT=""
+CT_GDB_16_or_older=y
+CT_GDB_older_than_16=y
 CT_GDB_15_or_older=y
 CT_GDB_older_than_15=y
 CT_GDB_14_or_older=y
@@ -720,6 +757,8 @@ CT_EXPAT_PKG_NAME="expat"
 CT_EXPAT_SRC_RELEASE=y
 # CT_EXPAT_SRC_DEVEL is not set
 CT_EXPAT_PATCH_ORDER="global"
+# CT_EXPAT_V_2_7 is not set
+# CT_EXPAT_V_2_6 is not set
 CT_EXPAT_V_2_5=y
 CT_EXPAT_VERSION="2.5.0"
 CT_EXPAT_MIRRORS="http://downloads.sourceforge.net/project/expat/expat/${CT_EXPAT_VERSION} https://github.com/libexpat/libexpat/releases/download/R_${CT_EXPAT_VERSION//./_}"
@@ -734,6 +773,8 @@ CT_GETTEXT_PKG_NAME="gettext"
 CT_GETTEXT_SRC_RELEASE=y
 # CT_GETTEXT_SRC_DEVEL is not set
 CT_GETTEXT_PATCH_ORDER="global"
+# CT_GETTEXT_V_0_26 is not set
+# CT_GETTEXT_V_0_23_1 is not set
 CT_GETTEXT_V_0_22_5=y
 # CT_GETTEXT_V_0_21 is not set
 # CT_GETTEXT_V_0_20_1 is not set
@@ -744,6 +785,8 @@ CT_GETTEXT_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GETTEXT_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GETTEXT_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GETTEXT_SIGNATURE_FORMAT="packed/.sig"
+CT_GETTEXT_0_23_or_older=y
+CT_GETTEXT_older_than_0_23=y
 CT_GETTEXT_later_than_0_21=y
 CT_GETTEXT_0_21_or_later=y
 CT_GETTEXT_INCOMPATIBLE_WITH_UCLIBC_NG=y
@@ -766,6 +809,7 @@ CT_GMP_PKG_NAME="gmp"
 CT_GMP_SRC_RELEASE=y
 # CT_GMP_SRC_DEVEL is not set
 CT_GMP_PATCH_ORDER="global"
+# CT_GMP_V_6_3 is not set
 CT_GMP_V_6_2=y
 # CT_GMP_V_6_1 is not set
 CT_GMP_VERSION="6.2.1"
@@ -774,6 +818,7 @@ CT_GMP_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GMP_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GMP_ARCHIVE_FORMATS=".tar.xz .tar.lz .tar.bz2"
 CT_GMP_SIGNATURE_FORMAT="packed/.sig"
+CT_GMP_EXTRA_CFLAGS=""
 CT_COMP_LIBS_ISL=y
 CT_COMP_LIBS_ISL_PKG_KSYM="ISL"
 CT_ISL_DIR_NAME="isl"
@@ -781,6 +826,7 @@ CT_ISL_PKG_NAME="isl"
 CT_ISL_SRC_RELEASE=y
 # CT_ISL_SRC_DEVEL is not set
 CT_ISL_PATCH_ORDER="global"
+# CT_ISL_V_0_27 is not set
 CT_ISL_V_0_26=y
 # CT_ISL_V_0_25 is not set
 # CT_ISL_V_0_24 is not set
@@ -793,6 +839,7 @@ CT_ISL_V_0_26=y
 # CT_ISL_V_0_17 is not set
 # CT_ISL_V_0_16 is not set
 # CT_ISL_V_0_15 is not set
+# CT_ISL_V_0_11 is not set
 CT_ISL_VERSION="0.26"
 CT_ISL_MIRRORS="https://libisl.sourceforge.io"
 CT_ISL_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
@@ -811,6 +858,7 @@ CT_LIBICONV_PKG_NAME="libiconv"
 CT_LIBICONV_SRC_RELEASE=y
 # CT_LIBICONV_SRC_DEVEL is not set
 CT_LIBICONV_PATCH_ORDER="global"
+# CT_LIBICONV_V_1_18 is not set
 CT_LIBICONV_V_1_16=y
 # CT_LIBICONV_V_1_15 is not set
 CT_LIBICONV_VERSION="1.16"
@@ -826,16 +874,13 @@ CT_MPC_PKG_NAME="mpc"
 CT_MPC_SRC_RELEASE=y
 # CT_MPC_SRC_DEVEL is not set
 CT_MPC_PATCH_ORDER="global"
-# CT_MPC_V_1_3 is not set
-CT_MPC_V_1_2=y
-CT_MPC_VERSION="1.2.1"
+CT_MPC_V_1_3=y
+CT_MPC_VERSION="1.3.1"
 CT_MPC_MIRRORS="https://www.multiprecision.org/downloads $(CT_Mirrors GNU mpc)"
 CT_MPC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_MPC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_MPC_ARCHIVE_FORMATS=".tar.gz"
 CT_MPC_SIGNATURE_FORMAT="packed/.sig"
-CT_MPC_later_than_1_1_0=y
-CT_MPC_1_1_0_or_later=y
 CT_COMP_LIBS_MPFR=y
 CT_COMP_LIBS_MPFR_PKG_KSYM="MPFR"
 CT_MPFR_DIR_NAME="mpfr"
@@ -844,14 +889,12 @@ CT_MPFR_SRC_RELEASE=y
 # CT_MPFR_SRC_DEVEL is not set
 CT_MPFR_PATCH_ORDER="global"
 CT_MPFR_V_4_2=y
-CT_MPFR_VERSION="4.2.1"
+CT_MPFR_VERSION="4.2.2"
 CT_MPFR_MIRRORS="https://www.mpfr.org/mpfr-${CT_MPFR_VERSION} $(CT_Mirrors GNU mpfr)"
 CT_MPFR_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_MPFR_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_MPFR_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz .zip"
 CT_MPFR_SIGNATURE_FORMAT="packed/.asc"
-CT_MPFR_later_than_4_0_0=y
-CT_MPFR_4_0_0_or_later=y
 CT_COMP_LIBS_NCURSES=y
 CT_COMP_LIBS_NCURSES_PKG_KSYM="NCURSES"
 CT_NCURSES_DIR_NAME="ncurses"
@@ -859,6 +902,7 @@ CT_NCURSES_PKG_NAME="ncurses"
 CT_NCURSES_SRC_RELEASE=y
 # CT_NCURSES_SRC_DEVEL is not set
 CT_NCURSES_PATCH_ORDER="global"
+# CT_NCURSES_V_6_5 is not set
 CT_NCURSES_V_6_4=y
 # CT_NCURSES_V_6_2 is not set
 # CT_NCURSES_V_6_1 is not set
@@ -868,7 +912,7 @@ CT_NCURSES_MIRRORS="https://invisible-mirror.net/archives/ncurses $(CT_Mirrors G
 CT_NCURSES_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_NCURSES_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_NCURSES_ARCHIVE_FORMATS=".tar.gz"
-CT_NCURSES_SIGNATURE_FORMAT="packed/.sig"
+CT_NCURSES_SIGNATURE_FORMAT="packed/.asc"
 CT_NCURSES_NEW_ABI=y
 CT_NCURSES_HOST_CONFIG_ARGS=""
 CT_NCURSES_HOST_DISABLE_DB=y
@@ -876,6 +920,7 @@ CT_NCURSES_HOST_FALLBACKS="linux,xterm,xterm-color,xterm-256color,vt100"
 CT_NCURSES_TARGET_CONFIG_ARGS=""
 # CT_NCURSES_TARGET_DISABLE_DB is not set
 CT_NCURSES_TARGET_FALLBACKS=""
+CT_NCURSES_EXTRA_CFLAGS=""
 CT_COMP_LIBS_ZLIB=y
 CT_COMP_LIBS_ZLIB_PKG_KSYM="ZLIB"
 CT_ZLIB_DIR_NAME="zlib"
@@ -883,7 +928,7 @@ CT_ZLIB_PKG_NAME="zlib"
 CT_ZLIB_SRC_RELEASE=y
 # CT_ZLIB_SRC_DEVEL is not set
 CT_ZLIB_PATCH_ORDER="global"
-# CT_ZLIB_V_1_3 is not set
+# CT_ZLIB_V_1_3_1 is not set
 CT_ZLIB_V_1_2_13=y
 CT_ZLIB_VERSION="1.2.13"
 CT_ZLIB_MIRRORS="https://github.com/madler/zlib/releases/download/v${CT_ZLIB_VERSION} https://www.zlib.net/"
@@ -898,11 +943,12 @@ CT_ZSTD_PKG_NAME="zstd"
 CT_ZSTD_SRC_RELEASE=y
 # CT_ZSTD_SRC_DEVEL is not set
 CT_ZSTD_PATCH_ORDER="global"
+# CT_ZSTD_V_1_5_7 is not set
 # CT_ZSTD_V_1_5_6 is not set
 CT_ZSTD_V_1_5_5=y
 # CT_ZSTD_V_1_5_2 is not set
 CT_ZSTD_VERSION="1.5.5"
-CT_ZSTD_MIRRORS="https://github.com/facebook/zstd/releases/download/v${CT_ZSTD_VERSION} https://www.zstd.net/"
+CT_ZSTD_MIRRORS="https://github.com/facebook/zstd/releases/download/v${CT_ZSTD_VERSION} https://downloads.sourceforge.net/project/zstandard.mirror/v${CT_ZSTD_VERSION}"
 CT_ZSTD_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_ZSTD_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_ZSTD_ARCHIVE_FORMATS=".tar.gz"
@@ -948,7 +994,6 @@ CT_MAKE_SRC_RELEASE=y
 # CT_MAKE_SRC_DEVEL is not set
 CT_MAKE_PATCH_ORDER="global"
 CT_MAKE_V_4_3=y
-# CT_MAKE_V_4_2 is not set
 CT_MAKE_VERSION="4.3"
 CT_MAKE_MIRRORS="$(CT_Mirrors GNU make)"
 CT_MAKE_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
